--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.33.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.20",
     "serverless": "^3.27.0",
     "serverless-offline": "^12.0.4"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1310.0",
+    "bluebird": "^3.7.2",
+    "moment": "^2.29.4"
   }
 }
